--- a/public/css/host.css
+++ b/public/css/host.css
@@ -19,7 +19,7 @@ html {
 .container {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 20px;
+    padding-top: 100px;
     flex: 1;
   display: flex;
   flex-direction: column;
@@ -157,7 +157,7 @@ textarea {
     color: white;
     border: none;
     padding: 10px 20px;
-    border-radius: 5px;
+    border-radius: 25px;
     cursor: pointer;
     font-size: 1rem;
     transition: background-color 0.3s;
