--- a/public/css/info.css
+++ b/public/css/info.css
@@ -123,6 +123,7 @@ h1 {
     align-items: center;
     justify-content: center;
     min-height: 60vh;
+    padding-top: 8ch;
 }
 .button-container {
     display: flex;
@@ -143,10 +144,7 @@ h1 {
     transition: transform 0.3s, box-shadow 0.3s;
     cursor: pointer;
 }
-/* .about-section:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 8px 20px rgba(0,0,0,0.15);
-} */
+
 .about-section h2 {
     color: #19330b;
     margin-top: 0;
